--- a/framework/HexFiend_Framework-Info.plist
+++ b/framework/HexFiend_Framework-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.HexFiend_Framework</string>
+	<string>com.ridiculousfish.HexFiend_Framework</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
