Fix copyrights. Fix version strings.
git-svn-id: http://svn.ridiculousfish.com/HexFiend2/trunk/HexFiend2@146 970bfac8-313e-0410-a5c9-dce1b049a841

--- a/app/Info.plist
+++ b/app/Info.plist
@@ -38,7 +38,9 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.0</string>
+	<string>200</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2.0.0</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
