--- a/framework/HexFiend_Framework-Info.plist
+++ b/framework/HexFiend_Framework-Info.plist
@@ -15,6 +15,8 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>200</string>
+	<key>CFBundleShortVersionString</key>
+	<string>2.0.0</string>
 </dict>
 </plist>
